--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -10,12 +10,14 @@ $darkgray: #444348;
 $black: #1a1a1a;
 $browngray: #ededed;
 $pinkiered: #ff7878;
+$dangercl: #fd9898;
 
 
 $maxWidthContainer: 1170px;
 $maxWidth: 1920px;
 
 $sourcesans-sf: 'Source Sans Pro', sans-serif;
-
+$inconsolata-sf: 'Inconsolata', sans-serif;
+$quicksand-sf: 'Quicksand', sans-serif;
 
 $auto: auto;
