--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -27,12 +27,13 @@
             }
         }
         .contacts-tar  {
-            margin-bottom: 68.3px;
+            margin-bottom: 39px;
             @media (max-width: 767px) {
-                margin-bottom: 30px;
+                margin-bottom: 0px;
             }
             .contacts-item {
                 text-align: center;
+                margin-bottom: 30px;
                 .contacts-item__tel {
                     text-align: center;
                     .contacts-item__tel__img {
@@ -48,7 +49,7 @@
                             line-height: 26px;
                         }
                         .tel {
-                            letter-spacing: 0.02em !important;
+                            letter-spacing: 0.02em;
                             margin-left: -4px;
                         }
                     }
@@ -140,14 +141,14 @@
                                                 outline-style: none;
                                             }
                                             &._error {
-                                                box-shadow: inset 0 0 15px #fac3c3;
-                                                border: 1px solid #fd9898;
+                                                box-shadow: inset 0 0 15px $dangercl;
+                                                border: 1px solid $dangercl;
                                                 font-family: 'PT Sans';
                                                 font-size: 14px;
                                                 line-height: 1.2;
                                                 font-weight: 400;
                                                 font-style: italic;
-                                                color: #dc7f7f;
+                                                color: $dangercl;
                                                 opacity: 0.5; 
                                             }
                                         }
@@ -159,6 +160,9 @@
                                 }
                                 &._2 {
                                     margin-left: -2px;
+                                    @media (max-width: 767px) {
+                                        text-align: center;
+                                    }
                                     .form__item {
                                         .form_textarea {
     
@@ -166,6 +170,9 @@
                                     }
                                     .form__item__button {
                                         text-align: end;
+                                        @media (max-width:767px) {
+                                            text-align: center;
+                                        }
                                         .form__input__button {
                                             margin-right: 16px;
                                             margin-top: 15px;
@@ -215,7 +222,6 @@
 }
 @media (max-width: 991px) {
     .form-row__col {
-        //padding-left: 15px!important;
     }
     .cont-form__wrapper {
         position: relative;
@@ -226,7 +232,7 @@
 }
 @media (max-width: 767px) {
     .form-row__col, .form__item__button {
-        text-align: center!important;
+        text-align: center;
     }
     .form-input {
         margin: 0 auto;
