--- a/scss/_pricing.scss
+++ b/scss/_pricing.scss
@@ -25,7 +25,6 @@
             .pricing-table__item {
                 text-align: center;
                 padding: 0 14px;
-                color: $black;
                 & ul {
                     padding: 0;
                     margin-bottom: 0;
@@ -33,7 +32,6 @@
                 & li {
                     list-style: none;
                 }
-                &.active {}
                 .price-table__item__header {
                     width: 100%;
                     height: 71px;
@@ -41,18 +39,6 @@
                     text-transform: uppercase; 
                     border: 1px solid $priceborder;
                     color: $black;
-                    &:hover {
-                        transition: 1s;
-                        color: $lightblue;
-                    }
-                    &.active {
-                        border-bottom: none;
-                        color: $lightblue;
-                        &:hover {
-                            transition: 1s;
-                            color: $black;
-                        }
-                    }
                     .price-table__item__header__type {
                         font-size: 25px;
                         font-weight: 700;
@@ -70,24 +56,10 @@
                     flex-direction: column;
                     width: 100%;
                     margin: auto;
-                    .active, &:hover {
-                        transition: 1s;
-                        background-color: $lightblue;
-                        color: $white; 
-                    }
-                    &.active {
-                        background-color: $lightblue; 
-                        margin-top: -1px;
-                        margin-left: -1px;
-                        &::after {
-                        }   
-                    }
                     .price-table__item__price__item {
                         margin: auto;
-                        &.active {}
                         .price-table__item__price__numb,.active {
                             position: relative;
-                            color: $black;
                             font-size: 59px;
                             font-weight: 600;
                             margin-top: -10px;
@@ -101,23 +73,9 @@
                                 left: -7px;
                                 font-size: 28px;
                             }
-                            &:hover {
-                                transition: 1s;
-                                color: $white;    
-                            }
-                            &.active {
-                                margin-bottom: 1
-                                px
-                                ;
-                                color: $white;
-                                &::after {
-                                    left: 3px;
-                                }
-                            }
                         }
-                        .price-table__item__price__numb__first {
+                        .price-table__item__price__numb._first {
                             position: relative;
-                            color: $black;
                             font-size: 59px;
                             font-weight: 600;
                             margin-top: -10px;
@@ -135,6 +93,7 @@
                                 color: $white;    
                             }
                         }
+                        
                         .price-table__item__price__text {
                             margin-top: 0px;
                             font-weight: 400;
@@ -142,19 +101,13 @@
                             letter-spacing: 0.01em;
                             margin-bottom: 0;   
                             line-height: 18px;
-                            &.active {
-                                margin-right: 11px;
-                                margin-bottom: -4px;
-                                &::after {
-                                    content:none;
-                                }
-                            }
+                            color: $lightgray;
+
                         }
                     }
                 }
                 .price-table__item__about {
                     border: 1px solid $priceborder;
-                    color: $black;
                     min-height: 271px;
                     .price-table__item__about__item {
                         margin: 0;
@@ -184,6 +137,21 @@
                             background-color: $lightblue;
                             color: $white;
                         }
+                    }
+                }
+                &:hover {
+                    transition: 1s;
+                    .price-table__item__header__type {
+                        color: $lightblue;
+                    }
+                    .price-table__item__price, .price-table__item__about__button__outline__secondary {
+                        background-color: $lightblue;
+                        color: $white;
+                    }.price-table__item__price__numb {
+                        color: $white;
+                    }
+                    .price-table__item__price__text {
+                        color: $white;
                     }
                 }
             }   
